log

Fri 15 Mar 2024 12:18:50 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:32: error: expected statement before ‘)’ token
   32 |   for(int i = 0; i < size; i++))
      |                                ^
exercises.c:34:22: error: ‘i’ undeclared (first use in this function)
   34 |       int temp = arr[i];
      |                      ^
exercises.c:34:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
95d96ad
Fri 15 Mar 2024 12:19:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:32: error: expected statement before ‘)’ token
   32 |   for(int i = 0; i < size; i++))
      |                                ^
exercises.c:34:22: error: ‘i’ undeclared (first use in this function)
   34 |       int temp = arr[i];
      |                      ^
exercises.c:34:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8a4a65c
Fri 15 Mar 2024 12:20:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f6bf50a
Fri 15 Mar 2024 12:22:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
62c04ca
Fri 15 Mar 2024 09:55:01 PM UTC: 
 exercises.c | 44 +++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 41 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:50:50: error: expected expression before ‘int’
   50 |   int *Newarreglo = (int *)malloc(size * sizeof(*int));
      |                                                  ^~~
exercises.c:53:32: error: expected statement before ‘)’ token
   53 |   for(int i = 0; i < size; i++))
      |                                ^
exercises.c:55:15: error: ‘i’ undeclared (first use in this function)
   55 |       if((arr[i] % 2 == 0)
      |               ^
exercises.c:55:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:55:27: error: expected ‘)’ before ‘{’ token
   55 |       if((arr[i] % 2 == 0)
      |         ~                 ^
      |                           )
   56 |       {
      |       ~                    
exercises.c:60:5: error: expected expression before ‘}’ token
   60 |     }
      |     ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:33: error: expected statement before ‘)’ token
   81 |   for(int i = 0; i < size1; i++))
      |                                 ^
exercises.c:83:31: error: ‘i’ undeclared (first use in this function)
   83 |       result[contador] = arr1[i];
      |                               ^
exercises.c:86:33: error: expected statement before ‘)’ token
   86 |   for(int i = 0; i < size2; i++))
      |                                 ^
exercises.c:91:45: error: ‘ordenar’ undeclared (first use in this function)
   91 |   qsort(result, size1 + size2, sizeof(int), ordenar);
      |                                             ^~~~~~~
test.c: In function ‘checkSorted’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0bbc5b9
